--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>Ca marche ! </title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content 2</div>
-    </body>
+<html lang="en">
+
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  	<link rel="stylesheet" href="/css/creative.css">
+  </head>
+  
+  <body>
+  <!-- Navbar -->
+	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+	 <h1 class="navbar-brand mb-0"><img src="/pictures/lapin.jpg" class="logo">WhatsUp</h1>
+	</nav>
+	
+	<div id ="connexion" class="container">
+		<div class="row">
+		  	<div align="center">
+			  <form>
+			  	  <h3>Identifiez-vous<br></h3>
+				  <div class="form-group">
+				    <label for="exampleInputText1">Nom utilisateur</label>
+				    <input type="text" class="form-control" id="exampleInputText1" placeholder="">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleInputPassword1">Mot de passe</label>
+				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+				  </div>
+				  <button type="submit" class="btn btn-primary">Connexion</button>
+			  </form>
+		  	</div>
+		</div>
+	</div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </body>
 </html>
