--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -17,23 +17,23 @@
 	 <h1 class="navbar-brand mb-0"><img src="/pictures/lapin.jpg" class="logo">WhatsUp</h1>
 	</nav>
 	
-	<div id ="connexion" class="container">
+	<div class="container">
 		<div class="row">
-		  	<div align="center">
-			  <form>
-			  	  <h3>Identifiez-vous<br></h3>
-				  <div class="form-group">
-				    <label for="exampleInputText1">Nom utilisateur</label>
-				    <input type="text" class="form-control" id="exampleInputText1" placeholder="">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputPassword1">Mot de passe</label>
-				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
-				  </div>
-				  <button type="submit" class="btn btn-primary">Connexion</button>
-			  </form>
-		  	</div>
-		</div>
+		  <div class="form_center" align="center">
+		  	<form>
+		  	  <h3>Identifiez-vous<br></h3>
+			  <div class="form-group">
+			    <label for="exampleInputText1">Nom utilisateur</label>
+			    <input type="text" class="form-control" id="exampleInputText1" placeholder="">
+			  </div>
+			  <div class="form-group">
+			    <label for="exampleInputPassword1">Mot de passe</label>
+			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+			  </div>
+			  <button type="submit" class="btn btn-primary">Connexion</button>
+			</form>
+		  </div>
+	    </div>
 	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
