--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -9,11 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   	<link rel="stylesheet" href="/css/creative.css">
+  	<title>WhatsUp</title>
   </head>
   
   <body>
   <!-- Navbar -->
-	<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+	<nav class="navbar navbar-light couleur">
 	 <h1 class="navbar-brand mb-0"><img src="/pictures/lapin.jpg" class="logo">WhatsUp</h1>
 	</nav>
 	
@@ -21,11 +22,29 @@
 		<div class="row">
 		  <div class="form_center" align="center">
 		  	<form>
-		  	  <h3>Identifiez-vous<br></h3>
+		  	  <h3>Inscrivez-vous<br></h3>
 			  <div class="form-group">
 			    <label for="exampleInputText1">Nom utilisateur</label>
 			    <input type="text" class="form-control" id="exampleInputText1" placeholder="">
 			  </div>
+			  <div class="form-group">
+		        <label for="inputEmail3">Email</label>
+		         <input type="email" class="form-control" id="inputEmail3" placeholder="">
+              </div>
+			  <div class="form-group">
+			    <label for="exampleInputPassword1">Mot de passe</label>
+			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+			  </div>
+			  <button type="submit" class="btn btn-primary">Inscription</button>
+			</form>
+		  </div>
+		  <div class="form_center" align="center">
+		  	<form>
+		  	  <h3>Identifiez-vous<br></h3>
+			  <div class="form-group">
+		        <label for="inputEmail">Email</label>
+		         <input type="email" class="form-control" id="inputEmail" placeholder="">
+              </div>
 			  <div class="form-group">
 			    <label for="exampleInputPassword1">Mot de passe</label>
 			    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
