--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
 	
 	<div class="container">
 		<div class="row">
-			<div id="signin-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" align="center">
+			<div id="signin-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" style="display: none;" align="center">
 				<form>
 					<h3>Identifiez-vous<br></h3>
 					<div class="form-group">
