--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -23,7 +23,10 @@
 	</nav>
 	
 	<div class="container">
+	
 		<div class="row">
+			
+			<!-- CONNEXION -->
 			<div id="signin-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" style="display: none;" align="center">
 				<form>
 					<h3>Identifiez-vous<br></h3>
@@ -35,14 +38,16 @@
 						<label for="exampleInputPassword1">Mot de passe</label>
 						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
 					</div>
-					<button type="submit" class="btn btn-primary">Connexion</button>
-					<div class="signup-link"><a href="#">Pas de compte ? Inscrivez-vous</a></div>
+					<input id="signin-btn" type="submit" class="btn btn-primary" value="Connexion"></input>
+					<div class="signup-link"><a href="#">Créer un compte</a></div>
 
 				</form>
 			</div>
+			
+			<!-- INSCRIPTION -->
 			<div id="signup-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" align="center">
 				<form>
-					<h3>Inscrivez-vous<br></h3>
+					<h3>Créer votre compte WhatsUp<br></h3>
 					<div class="form-group">
 						<label for="exampleInputText1">Nom utilisateur</label>
 						<input type="text" class="form-control" id="exampleInputText1" placeholder="">
@@ -55,10 +60,23 @@
 						<label for="exampleInputPassword1">Mot de passe</label>
 						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
 					</div>
-					<button type="submit" class="btn btn-primary">Inscription</button>
-					<div class="signin-link"><a href="#">Déjà un compte ? Connectez-vous</a></div>
+					<input id="signup-btn" type="submit" class="btn btn-primary" value="Créer un compte"></input>
 				</form>
 			</div>
+			
+			<!-- LISTE DES CONVERSATIONS -->
+			<div id="list-conv" class="col-sm-6 col-md-6 col-lg-6" align="left">
+				<h3>Conversations</h3>
+			    <div class="list-group" id="list-tab" role="tablist">
+			      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
+			    </div>
+		    </div>
+		    <div id="conversation" class="col-sm-6 col-md-6 col-lg-6" align="left">
+				<h3>Conversations</h3>
+			    <div class="list-group" id="list-tab" role="tablist">
+			      <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
+			    </div>
+		    </div>
 		</div>
 	</div>
 
