--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -12,19 +12,43 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/myjs.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
 	<title>WhatsUp</title>
 </head>
 
 <body>
 	<!-- Navbar -->
-	<nav class="navbar navbar-light">
-		<img src="/pictures/lapin.jpg" class="logo"><h1 class="navbar-brand mb-0">WhatsUp</h1>
+	<nav class="navbar navbar-toggleable-md navbar-light navbar-inverse">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<img src="/pictures/lapin.jpg" class="logo"><a class="navbar-brand" href="#">ESIEA Messenger</a>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#">New message</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Settings</a>
+				</li>
+				<li class="nav-item">
+					<button id="btn-disconnect" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Disconnect</button>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	
+	<!-- A rajouter en haut de la liste de conversation -->
+	<form class="form-inline my-2 my-lg-0" style="display: none;">
+		<input class="form-control mr-sm-2" type="text" placeholder="Search">
+		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+	</form>
+
 	<div class="container">
 		<div class="row">
-			<div id="signin-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" style="display: none;" align="center">
+			<div id="signin-form" class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3" style="display: none;" align="center">
 				<form>
 					<h3>Identifiez-vous<br></h3>
 					<div class="form-group">
@@ -40,7 +64,7 @@
 
 				</form>
 			</div>
-			<div id="signup-form" class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3" align="center">
+			<div id="signup-form" class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3" align="center">
 				<form>
 					<h3>Inscrivez-vous<br></h3>
 					<div class="form-group">
