--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -80,29 +80,28 @@
 						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
 					</div>
 					<input id="signup-btn" type="submit" class="btn btn-primary" value="Créer un compte"></input>
+					<div class="signin-link"><a href="#">Connectez-vous</a></div>
 				</form>
 			</div>
-			
 		</div>
-		<!-- LISTE DES CONVERSATIONS -->
-		<div id="message-ui" class="container" style="display: none;">
-			<div class="row">
-				<div id="list-conv" class="col-sm-6 col-md-4 col-lg-3" align="left">
-					<input type="text" autocomplete="off" placeholder="Search Messenger" spellcheck="false" value="">
-					<h3>Conversations</h3>
-					<div class="list-group" id="list-tab" role="tablist">
-						<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
-					</div>
+	</div>	
+	<!-- LISTE DES CONVERSATIONS -->
+	<div id="message-ui" class="container-fluid" style="display: none;">
+		<div class="row">
+			<div id="list-conv" class="col-sm-12 col-md-4 col-lg-3" align="left">
+				<input type="text" autocomplete="off" placeholder="Search Messenger" spellcheck="false" value="">
+				<h3>Conversations</h3>
+				<div class="list-group" id="list-tab" role="tablist">
+					<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
 				</div>
-				<div id="conversation" class="col-sm-6 col-md-8 col-lg-9" align="left">
-					<h3>Discussion</h3>
-					<div class="list-group" id="list-tab" role="tablist">
-						<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
-					</div>
+			</div>
+			<div id="conversation" class="col-sm-12 col-md-8 col-lg-9" align="left">
+				<h3>Discussion</h3>
+				<div class="list-group" id="list-tab" role="tablist">
+					<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#" role="tab" aria-controls="profile">Users</a>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 </body>
