--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -63,15 +63,15 @@
 					<h3>Créer votre compte WhatsUp<br></h3>
 					<div class="form-group">
 						<label for="exampleInputText1">Nom utilisateur</label>
-						<input type="text" class="form-control" id="exampleInputText1" placeholder="">
+						<input type="text" class="form-control" id="userName" placeholder="">
 					</div>
 					<div class="form-group">
 						<label for="inputEmail3">Email</label>
-						<input type="email" class="form-control" id="inputEmail3" placeholder="">
+						<input type="email" class="form-control" id="mail" placeholder="">
 					</div>
 					<div class="form-group">
 						<label for="exampleInputPassword1">Mot de passe</label>
-						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+						<input type="password" class="form-control" id="password" placeholder="">
 					</div>
 					<input id="signup-btn" type="submit" class="btn btn-primary" value="Créer un compte"></input>
 					<div class="signin-link"><a href="#">Connectez-vous</a></div>
@@ -79,6 +79,7 @@
 			</div>
 		</div>
 	</div>	
+	
 	
 	<script src="https://use.fontawesome.com/45e03a14ce.js"></script>
 	
