--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -29,8 +29,8 @@
 
 		<div class="collapse navbar-collapse pull-right" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<button id="btn-disconnect" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Déconnexion</button>
+				<li class="nav-item" id="btn-disconnect" style="display: none;">
+					<button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Déconnexion</button>
 				</li>
 			</ul>
 		</div>
