Autocompletion under construction

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -218,7 +218,8 @@
 				
 				<div class="search_contact input-group">
 					<span class="input-group-addon">À</span>
-					<input type="text" class="form-control" placeholder="Saisissez le nom d'un destinataire...">
+					<input id="toUser" type="text" class="form-control" placeholder="Saisissez le nom d'un destinataire...">
+					<select id="userNameList"></select>
 				</div>
 
 				<div class="chat_area">
