User creation : Verify if user name already exists OK

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -67,6 +67,7 @@
 					<div class="form-group">
 						<label for="exampleInputText1">Nom utilisateur</label>
 						<input type="text" class="form-control" id="userName" placeholder="">
+						<div class="errorForm" id="errorNameAlreadyExist"></div>
 					</div>
 					<div class="form-group">
 						<label for="inputEmail3">Email</label>
