Jquery function for checking empty fields OK

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -67,15 +67,17 @@
 					<div class="form-group">
 						<label for="exampleInputText1">Nom utilisateur</label>
 						<input type="text" class="form-control" id="userName" placeholder="">
-						<div class="errorForm" id="errorNameAlreadyExist"></div>
+						<div class="errorForm" id="errorName"></div>
 					</div>
 					<div class="form-group">
 						<label for="inputEmail3">Email</label>
 						<input type="email" class="form-control" id="mail" placeholder="">
+						<div class="errorForm" id="errorEmailNull"></div>
 					</div>
 					<div class="form-group">
 						<label for="exampleInputPassword1">Mot de passe</label>
 						<input type="password" class="form-control" id="password" placeholder="">
+						<div class="errorForm" id="errorPasswordNull"></div>
 					</div>
 					<input id="signup-btn" type="submit" class="btn btn-primary" value="Créer un compte"></input>
 					<div class="signin-link"><a href="#">Connectez-vous</a></div>
