Function getting list of contacts OK

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -224,7 +224,7 @@
 					<input id="toUser" type="text" class="form-control" placeholder="Saisissez le nom d'un destinataire...">
 					<select id="userNameList"></select>
 				</div>
-
+				<div class="errorForm" id="errorMessageAdressees"></div>
 				<div class="chat_area">
 					<ul class="chat-list list-unstyled">
 						<li id="recieved" class="left clearfix hide">
