Insert and match idConversation with each idUser (adressees)

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -225,6 +225,9 @@
 					<select id="userNameList"></select>
 				</div>
 				<div class="errorForm" id="errorMessageAdressees"></div>
+				<div>
+					<input id="signup-test" type="submit" class="btn btn-primary" value="TEST"></input>
+				</div>
 				<div class="chat_area">
 					<ul class="chat-list list-unstyled">
 						<li id="recieved" class="left clearfix hide">
