Create a new conversation OK

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -95,9 +95,8 @@
 			<div id="list-conv" class="col-sm-12 col-md-4 col-lg-3 chat_sidebar" align="left">
 
 				<div class="new_conv">
-					<button class="btn"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Nouvelle conversation</button>
+					<button class="btn" id="newConv"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Nouvelle conversation</button>
 				</div>
-
 				<div class="list_conv">
 					<ul class="list-unstyled">
 						<li class="left clearfix">
