--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+<script type="text/javascript">alert("COCORICO");</script>
 	<!-- Navbar -->
 	<nav class="navbar navbar-toggleable-md navbar-light navbar-inverse">
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +55,7 @@
 					</div>
 					<div class="form-group">
 						<label for="exampleInputPassword1">Mot de passe</label>
-						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="">
+						<input type="password" class="form-control" id="inputPassword" placeholder="">
 					</div>
 					<input id="signin-btn" type="submit" class="btn btn-primary" value="Connexion"></input>
 					<div class="signup-link"><a href="#">Créer un compte</a></div>
@@ -99,7 +100,7 @@
 				</div>
 				<div class="list_conv">
 					<ul class="list-unstyled">
-						<li class="left clearfix">
+						<li id="idConv_6" class="left clearfix">
 							<span class="pull-left">
 								<img src="/pictures/alina.JPG">
 							</span>
@@ -113,7 +114,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="left clearfix">
+						<li id="idConv_7" class="left clearfix">
 							<span class="chat-img pull-left">
 								<img src="/pictures/alina.JPG" alt="User Avatar" class="img-circle">
 							</span>
