--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<script type="text/javascript">alert("COCORICO");</script>
+
 	<!-- Navbar -->
 	<nav class="navbar navbar-toggleable-md navbar-light navbar-inverse">
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +99,7 @@
 					<button class="btn" id="newConv"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>Nouvelle conversation</button>
 				</div>
 				<div class="list_conv">
-					<ul class="list-unstyled">
+					<ul id="listConversation" class="list-unstyled">
 						<li id="idConv_6" class="left clearfix">
 							<span class="pull-left">
 								<img src="/pictures/alina.JPG">
