Log deleted empty chat list when clic on validate button for new conversation

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -115,7 +115,7 @@
 				</div>
 				<div class="errorForm" id="errorMessageAdressees"></div>
 				<div class="chat_area">
-					<ul class="chat-list list-unstyled">
+					<ul class="chat-list list-unstyled" id="chatArea">
 					</ul>
 				</div><!-- end of chat_area-->
 
